@startuml
class BehavioralPatterns.Comand.AdditionCommand {
- Calculator calculator
+ void execute(int,int)
}
class BehavioralPatterns.Comand.CalculatorRunner {
+ {static} void main(String[])
}
class BehavioralPatterns.Comand.SubstractionCommand {
- Calculator calculator
+ void execute(int,int)
}
class BehavioralPatterns.Comand.Calculator {
+ void addition(int,int)
+ void substraction(int,int)
}
class BehavioralPatterns.Comand.CalculatorInvoker {
- CalculatorCommand addition
- CalculatorCommand substraction
+ void getSum(int,int)
+ void getDifference(int,int)
}
interface BehavioralPatterns.Comand.CalculatorCommand {
~ void execute(int,int)
}


BehavioralPatterns.Comand.CalculatorCommand <|.. BehavioralPatterns.Comand.AdditionCommand
BehavioralPatterns.Comand.CalculatorCommand <|.. BehavioralPatterns.Comand.SubstractionCommand
@enduml